<resources>
    <string name="app_name">QRice Delivery App</string>
    <string name="forgot">Forgot Password?</string>
    <string name="notyet">Not registered yet?</string>
    <string name="login">Login</string>
    <string name="submit">Submit</string>
    <string name="register">SIGN UP</string>
    <string name="rupee_symbol">\u20B9</string>
    <string name="status">Status : </string>
    <string name="send_otp">Send OTP</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="date">23/5/2020</string>
    <string name="cancel">Canecel</string>
    <string name="reset_password">Reset password</string>
    <string name="confirm_mobile">Verified!!!</string>
    <string name="phone">Mobile Number</string>
    <string name="cont">Continue</string>
    <string name="confirm_mobile_no">We have send you an OTP for\n Mobile Number Verification \n 9988772233</string>
    <string name="notifi_text">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
        Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s</string>
    <string name="content">Lorem Ipsum is simply dummy text of the printing and typesetting industry.
       \n\n when an unknown printer took a galley of type and scrambled it to make a type specimen book.
        \n\nIt was popularised in the 1960s with the release of
        Letraset sheets containing Lorem Ipsum passages</string>
    <string name="forgot_title">Forgot Password</string>
    <string name="reject_content">Are you sure want to reject this order</string>
    <string name="request_rejected">Request is rejected</string>
    <string name="forgot_password_content">New password will be sent on \nyour registered Email Id!!!</string>
    <string name="forgot_password_content_second">Your new password has been sent on your registered mail Id. Please check!!!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">Ok</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_login">Login</string>
    <string name="menu_cart">Cart</string>
    <string name="menu_my_profile">My Profile</string>
    <string name="menu_my_order">My Orders</string>
    <string name="menu_order">Orders Request</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_offers">Notifications</string>
    <string name="menu_notificationoffers">Notifications</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
</resources>