<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">
    <group android:checkableBehavior="single"
        android:id="@+id/group2">
        <item
            android:id="@+id/nav_login"
            android:icon="@drawable/ic_login"
            android:visible="false"
            android:title="@string/menu_login" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group3">
        <item
            android:id="@+id/nav_my_profile"
            android:icon="@drawable/ic_user"
            android:title="@string/menu_my_profile" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group4">
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/list"
            android:title="@string/menu_order" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group5">
        <item
            android:id="@+id/nav_my_order"
            android:icon="@drawable/list"
            android:title="@string/menu_my_order" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group6">
        <item
            android:id="@+id/nav_notification_offers"
            android:icon="@drawable/ic_offer"
            android:title="@string/menu_offers" />
    </group>
    <group android:checkableBehavior="single"
        android:id="@+id/group11">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_logout" />
    </group>
</menu>