<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="20dp"
    android:orientation="horizontal">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_forgot"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_title"
        android:textSize="18sp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/black"/>

</LinearLayout>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:layout_marginEnd="25dp"
        android:textColor="@color/black"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/forgot_password_content"
        android:id="@+id/forgotMobile"
        android:drawablePadding="10dp"
        android:layout_marginStart="25dp"
       />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/yes"
            android:id="@+id/yes"
            android:textAllCaps="false"
            android:background="@drawable/button_green"
            android:textSize="15sp"
            android:textColor="@color/white"
             />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/no"
            android:textAllCaps="false"
            android:textSize="15sp"
            android:background="@drawable/button_yellow"
            android:id="@+id/no"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/white"/>
    </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
