<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="30dp"
    android:layout_marginRight="30dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:textSize="18sp"
            android:gravity="center_horizontal"
            android:layout_marginEnd="25dp"
            android:textColor="@color/black"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:text="@string/reject_content"
            android:id="@+id/title"
            android:drawablePadding="10dp"
            android:layout_marginStart="25dp"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/yes"
                android:id="@+id/yes"
                android:background="@drawable/button_green"
                android:textSize="15sp"
                android:textColor="@color/white"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:layout_width="wrap_content"
                android:layout_height="35dp"
                android:text="@string/no"
                android:textSize="15sp"
                android:background="@drawable/button_yellow"
                android:id="@+id/no"
                android:layout_marginLeft="15dp"
                android:layout_marginRight="15dp"
                android:textColor="@color/white"/>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
