<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginLeft="20dp"
    android:layout_marginRight="20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:layout_marginTop="20dp"
    android:orientation="horizontal">
    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/ic_forgot"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_title"
        android:textSize="18sp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:textColor="@color/black"/>

</LinearLayout>
    <androidx.appcompat.widget.AppCompatEditText
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginTop="30dp"
        android:inputType="phone"
        android:textSize="14sp"
        android:layout_marginEnd="25dp"
        android:hint="Phone Number"
        android:maxLength="10"
        android:textColor="@color/black"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:id="@+id/forgotMobile"
        android:drawablePadding="10dp"
        android:drawableStart="@drawable/ic_phone"
        android:layout_marginStart="25dp"
        android:background="@drawable/dotted_line"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="end"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="25dp"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:id="@+id/cancel"
            android:background="@android:color/transparent"
            android:textSize="15sp"
            android:textColor="@color/black"
             />
        <androidx.appcompat.widget.AppCompatButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reset_password"
            android:textSize="15sp"
            android:background="@android:color/transparent"
            android:id="@+id/resetPassword"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:textColor="@color/colorPrimary"/>
    </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>
